# backend/docs/swagger.json
@@ -253,6 +253,11 @@
         },
         "/api/workspaces": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a workspace and automatically add the authenticated user as the owner.",
                 "consumes": [
                     "application/json"
@@ -305,6 +310,11 @@
         },
         "/api/workspaces/{workspace_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Fetch a workspace by ID. Only workspace members can access it.",
                 "produces": [
                     "application/json"
@@ -650,6 +660,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
